Misc. cleanup